--- a/back-end/.vscode/launch.json
+++ b/back-end/.vscode/launch.json
@@ -9,7 +9,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "type": "node"
+            "type": "node",
         }
     ]
+    
 }
