--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "transpile": "tsup src",
     "start-dev": "tsx --env-file=.env src/server.ts",
-    "start-watch": "tsx watch --env-file=.env  src/server.ts",
+    "start-watch": "tsx watch --env-file-.env src/server.ts",
+    "start-watch-temp": "tsx watch src/server.ts",
     "start-transpile": "npm run transpile && node dist/server.js"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
 }
