--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "transpile": "tsup src",
     "start-dev": "tsx --env-file=.env src/server.ts",
-    "start-watch": "tsx watch --env-file-.env src/server.ts",
+    "start-watch": "tsx watch --env-file=.env src/server.ts",
     "start-watch-temp": "tsx watch src/server.ts",
     "start-transpile": "npm run transpile && node dist/server.js"
   },
